--- a/_posts/2021-02-16-biobox.markdown
+++ b/_posts/2021-02-16-biobox.markdown
@@ -2,7 +2,7 @@
 layout: post
 title:  "Biomaterials - Some Notes from the STEAMhouse Biobox course"
 date:   2021-02-16 11:00:00 +0100
-categories: jekyll update
+categories: blogpost
 ---
 I recently took part in [STEAMhouse's Biobox Workshop](https://steamhouse.org.uk/events/biobox-workshop/), an excellent 4 week course combining "self-led materials research with live sessions [exploring] different areas related to materials development", led by Sarah King of STEAMhouse and Zoe Powell of Materiom. [Ross Dalziel](https://cheapjack.github.io/) was also on the course - we'd both already done a bit of experimenting with [biomaterials and natural dyes](https://github.com/DoESLiverpool/Wearables/wiki/Bio-Materials) at DoES Liverpool.
 
