Removed repeated 'the'

--- a/_posts/2021-02-16-biobox.markdown
+++ b/_posts/2021-02-16-biobox.markdown
@@ -59,7 +59,7 @@ I'd been inspired by Sophie Hedderwick's talk about conductive materials at this
 
 **Conductive Materials! - Based on Materiom Recipes [Ca02](https://materiom.org/recipe/191) and [CoF 01](https://materiom.org/recipe/212)**
 
-The activated charcoal I'd ordered from eBay finally arrived. Sophie's experiments used the Materiom recipe [Ge04](https://materiom.org/recipe/208) "Conductive Gelatin bioplastic" and the material she produced looked glossy and pliable material. I didn't really want to use gelatin so decided to try a couple of plant-based recipes. The first was the the Carageenan Iota recipe I used above. I added 16g of activated charcoal instead of the Spirulina and used a plastic box as a mould. Again it took a long time to dry and curled up a lot when I used the dehydrator. The second recipe was for coconut Fibre and Agar Bioplastic - activated charcoal is made from coconut fibre, so it seemed reasonable to substitute it. I added 19g. This agar bioplastic dried a lot faster than the seaweed one, but I still used the dehydrator and it still curled up a bit. Despite containing glycerol both materials were hard and dull looking, but seem quite strong.
+The activated charcoal I'd ordered from eBay finally arrived. Sophie's experiments used the Materiom recipe [Ge04](https://materiom.org/recipe/208) "Conductive Gelatin bioplastic" and the material she produced looked glossy and pliable material. I didn't really want to use gelatin so decided to try a couple of plant-based recipes. The first was the Carageenan Iota recipe I used above. I added 16g of activated charcoal instead of the Spirulina and used a plastic box as a mould. Again it took a long time to dry and curled up a lot when I used the dehydrator. The second recipe was for Coconut Fibre and Agar Bioplastic - activated charcoal is made from coconut fibre, so it seemed reasonable to substitute it. I added 19g. This agar bioplastic dried a lot faster than the seaweed one, but I still used the dehydrator and it still curled up a bit. Despite containing glycerol both materials were hard and dull looking, but seem quite strong.
 
 I tested both with a multimeter and also used them as part of a circuit to light an LED. They're both conductive (the carageenan biomaterial seemed more conductive than the agar one in this test) and I think could have some interesting uses in future projects.
 
